src-tauri/cargo_check_errors_4_utf8.txt
cargo :     Checking d2r-rust v0.1.0 (F:\mycode\D2Rmutiplay\d2r-rus
t\src-tauri)
所在位置 行:1 字符: 1
+ cargo check 2> cargo_check_errors_4.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking d2...rus 
   t\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0432]: unresolved import `windows_capture::settings::CursorM
ode`
  --> src\modules\ai.rs:14:29
   |
14 |     settings::{ColorFormat, CursorMode, Settings},
   |                             ^^^^^^^^^^ no `CursorMode` in `set
tings`

error[E0061]: this function takes 8 arguments but 4 arguments were 
supplied
   --> src\modules\ai.rs:104:24
    |
104 |           let settings = Settings::new(
    |  ________________________^^^^^^^^^^^^^-
105 | |             monitor,
106 | |             CursorMode::Hide,
107 | |             ColorFormat::Rgba8,
108 | |             tx
109 | |         );
    | |_________- multiple arguments are missing
    |
note: associated function defined here
   --> C:\Users\yoyos\.cargo\registry\src\index.crates.io-1949cf8c6
b5b557f\windows-capture-1.5.0\src\settings.rs:133:18
    |
133 |     pub const fn new(
    |                  ^^^
help: provide the arguments
    |
104 ~         let settings = Settings::new(
105 +             monitor,
106 +             CursorMode::Hide,
107 +             /* DrawBorderSettings */,
108 +             /* SecondaryWindowSettings */,
109 +             /* MinimumUpdateIntervalSettings */,
110 +             /* DirtyRegionSettings */,
111 +             ColorFormat::Rgba8,
112 +             tx,
113 ~         );
    |

error[E0282]: type annotations needed
   --> src\modules\ai.rs:113:13
    |
113 |         let img = rx.recv().map_err(|_| "鎺ユ敹鍥惧儚娴佽秴鏃舵垨涓柇")?;
    |             ^^^
114 |         let (width, height) = img.dimensions();
    |                               --- type must be known at this 
point
    |
help: consider giving `img` an explicit type
    |
113 |         let img: /* Type */ = rx.recv().map_err(|_| "鎺ユ敹鍥惧儚娴佽
秴鏃舵垨涓柇")?;
    |                ++++++++++++

error[E0596]: cannot borrow `buffer` as mutable, as it is not decla
red as mutable
  --> src\modules\ai.rs:46:29
   |
46 |         let mut bgra_data = buffer.as_raw_buffer().to_vec();
   |                             ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
41 |         let mut buffer = frame.buffer()?;
   |             +++

Some errors have detailed explanations: E0061, E0282, E0432, E0596.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `d2r-rust` (lib) due to 4 previous errors
